--- a/index.html
+++ b/index.html
@@ -8,23 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="text-white">
-    hahahaha
-    <!-- <div class="container d-flex align-items-center vh-100">
 
-        <div class="card mx-auto border border-0 rounded-4 shadow py-3 px-2" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title fw-bold text-center">Love Calculator</h5>
-              <a href="Love Calculator/" target="_blank">
-                  <button class="btn btn-success w-100">Check</button>
-              </a>
-            </div>
-        </div>
-
-
-    </div> -->
     <div class="containers">
         <!-- <p class="containers-title mt-1">JavaScript Projects<br>we’re proud of</p> -->
-        <h1 class="p-5 text-center fw-bold">JavaScript Projects</h1>
+        <h1 class="pt-5 text-center fw-bold">JavaScript Projects</h1>
         
         <div class="gradient-cards">
 
