love calculator padding

--- a/Love Calculator/index.html
+++ b/Love Calculator/index.html
@@ -11,17 +11,17 @@
 <body>
     <div class="flex items-center justify-center flex-col h-screen">
             
-        <div class="love-calculator flex items-center justify-evenly flex-col border border-gray-400 rounded-lg py-10 shadow-lg bg-gray-800" style="width: 420px !important;">
+        <div class="love-calculator flex items-center justify-evenly flex-col border border-gray-400 rounded-3xl py-10 shadow-lg bg-gray-800" style="width: 310px !important;">
             <h1 class="text-2xl italic font-black m-2 text-rose-600" style="-webkit-text-stroke: .5px whitesmoke;">Love Calculator</h1>
 
-            <label class="form-control w-full max-w-xs">
+            <label class="form-control w-full max-w-xs px-3">
                 <div class="label">
                     <span class="label-text">Your name</span>
                 </div>
                 <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs mb-2" id="name1" />
             </label>
 
-            <label class="form-control w-full max-w-xs mb-4">
+            <label class="form-control w-full max-w-xs mb-4 px-3">
                 <div class="label">
                     <span class="label-text">Partner's Name</span>
                 </div>
