--- a/Loan Calculator/index.html
+++ b/Loan Calculator/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="d-flex justify-content-center align-items-center vh-100 p-3">
 
-    <div class="container border border-2 d-flex align-items-center">
+    <div class="container border d-flex align-items-center">
         <div class="col-6 bg-light-subtle p-3">
             <form action="" class="form py-3 col-11" id="loanForm">
         
